# warmane-trade

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/raw/: actioneer-2025-03-04.html
src/trade/: actioneer_raw_csv_cli.py
